--- a/Classwork/06.04.19...Intro.to.Keras/Intro.to.Keras.ipynb
+++ b/Classwork/06.04.19...Intro.to.Keras/Intro.to.Keras.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "# 🐍 DL Platforms in Python\n",
     "\n",
-    "1. Keras\n",
+    "1. **Keras**\n",
     "1. Tensorflow\n",
     "1. Pytorch\n",
     "1. Caffe\n",
