--- a/Classwork/06.11.19...NN.Convolutional/Convolutional.Neural.Network.ipynb
+++ b/Classwork/06.11.19...NN.Convolutional/Convolutional.Neural.Network.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "### Max Pooling vs Average Pooling\n",
     "\n",
-    "* Max pooling: take the **maxiumum** element from each window of a certain size\n",
+    "* Max pooling: take the **maximum** element from each window of a certain size\n",
     "\n",
     "<img src=\"maxpooling.png\" width=\"400\" height=\"400\">"
    ]
@@ -92,8 +92,8 @@
    "source": [
     "### Flatten Layer\n",
     "\n",
+    "* ```Keras```'s version of ```numpy.reshape```\n",
     "* After feature extraction is completed by multiple *convolutional layers*, we use **flatten layer** to add MLP (*after convolutional layers*) to **classify**\n",
-    "* ```Keras```'s version of ```numpy.reshape```. Simple!\n",
     "* Reshapes *n*-dimensional arrays to a vector -- necessary when moving from Conv2D layers, which expect 2-D arrays as inputs\n",
     "    * Concrete example: A Flatten layer given a 28 x 28 array as input would output a vector of the shape (784, 1)"
    ]
