💚 model why you no work :(

--- a/Projects/Homework1/Homework1.ipynb
+++ b/Projects/Homework1/Homework1.ipynb
@@ -909,13 +909,7 @@
       "354/354 [==============================] - 0s 80us/step - loss: 0.0187 - mean_absolute_error: 0.1015 - acc: 0.0311\n",
       "Epoch 63/100\n",
       "354/354 [==============================] - 0s 84us/step - loss: 0.0186 - mean_absolute_error: 0.1018 - acc: 0.0311\n",
-      "Epoch 64/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 64/100\n",
       "354/354 [==============================] - 0s 64us/step - loss: 0.0181 - mean_absolute_error: 0.0977 - acc: 0.0311\n",
       "Epoch 65/100\n",
       "354/354 [==============================] - 0s 56us/step - loss: 0.0179 - mean_absolute_error: 0.0971 - acc: 0.0311\n",
@@ -1643,13 +1637,7 @@
       "576/576 [==============================] - 0s 104us/step - loss: 0.5417 - acc: 0.7361 - val_loss: 0.5574 - val_acc: 0.7292\n",
       "Epoch 59/1000\n",
       "576/576 [==============================] - 0s 109us/step - loss: 0.5349 - acc: 0.7465 - val_loss: 0.5638 - val_acc: 0.7396\n",
-      "Epoch 60/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 60/1000\n",
       "576/576 [==============================] - 0s 102us/step - loss: 0.5370 - acc: 0.7535 - val_loss: 0.5530 - val_acc: 0.7448\n",
       "Epoch 61/1000\n",
       "576/576 [==============================] - 0s 130us/step - loss: 0.5381 - acc: 0.7517 - val_loss: 0.5728 - val_acc: 0.6927\n",
@@ -1893,13 +1881,7 @@
       "576/576 [==============================] - 0s 164us/step - loss: 0.4524 - acc: 0.7882 - val_loss: 0.5071 - val_acc: 0.7500\n",
       "Epoch 178/1000\n",
       "576/576 [==============================] - 0s 169us/step - loss: 0.4514 - acc: 0.7899 - val_loss: 0.4909 - val_acc: 0.7760\n",
-      "Epoch 179/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 179/1000\n",
       "576/576 [==============================] - 0s 188us/step - loss: 0.4549 - acc: 0.7847 - val_loss: 0.5336 - val_acc: 0.7240\n",
       "Epoch 180/1000\n",
       "576/576 [==============================] - 0s 178us/step - loss: 0.4777 - acc: 0.7656 - val_loss: 0.4930 - val_acc: 0.7656\n",
@@ -2141,13 +2123,7 @@
       "576/576 [==============================] - 0s 172us/step - loss: 0.4139 - acc: 0.8142 - val_loss: 0.5015 - val_acc: 0.7500\n",
       "Epoch 296/1000\n",
       "576/576 [==============================] - 0s 167us/step - loss: 0.4099 - acc: 0.8229 - val_loss: 0.5023 - val_acc: 0.7552\n",
-      "Epoch 297/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 297/1000\n",
       "576/576 [==============================] - 0s 176us/step - loss: 0.4270 - acc: 0.8003 - val_loss: 0.5047 - val_acc: 0.7500\n",
       "Epoch 298/1000\n",
       "576/576 [==============================] - 0s 176us/step - loss: 0.4212 - acc: 0.8021 - val_loss: 0.5031 - val_acc: 0.7552\n",
@@ -2389,13 +2365,7 @@
       "576/576 [==============================] - 0s 162us/step - loss: 0.3945 - acc: 0.8212 - val_loss: 0.5047 - val_acc: 0.7552\n",
       "Epoch 414/1000\n",
       "576/576 [==============================] - 0s 146us/step - loss: 0.4029 - acc: 0.8177 - val_loss: 0.4959 - val_acc: 0.7656\n",
-      "Epoch 415/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 415/1000\n",
       "576/576 [==============================] - 0s 143us/step - loss: 0.4015 - acc: 0.8073 - val_loss: 0.4944 - val_acc: 0.7812\n",
       "Epoch 416/1000\n",
       "576/576 [==============================] - 0s 154us/step - loss: 0.4077 - acc: 0.8247 - val_loss: 0.4947 - val_acc: 0.7604\n",
@@ -2637,13 +2607,7 @@
       "576/576 [==============================] - 0s 195us/step - loss: 0.3905 - acc: 0.8281 - val_loss: 0.5219 - val_acc: 0.7760\n",
       "Epoch 532/1000\n",
       "576/576 [==============================] - 0s 124us/step - loss: 0.3868 - acc: 0.8316 - val_loss: 0.5181 - val_acc: 0.7760\n",
-      "Epoch 533/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 533/1000\n",
       "576/576 [==============================] - 0s 111us/step - loss: 0.3914 - acc: 0.8385 - val_loss: 0.5232 - val_acc: 0.7604\n",
       "Epoch 534/1000\n",
       "576/576 [==============================] - 0s 126us/step - loss: 0.3979 - acc: 0.8160 - val_loss: 0.5116 - val_acc: 0.7656\n",
@@ -2885,13 +2849,7 @@
       "576/576 [==============================] - 0s 138us/step - loss: 0.3883 - acc: 0.8264 - val_loss: 0.5682 - val_acc: 0.7604\n",
       "Epoch 650/1000\n",
       "576/576 [==============================] - 0s 137us/step - loss: 0.3834 - acc: 0.8316 - val_loss: 0.5232 - val_acc: 0.7656\n",
-      "Epoch 651/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 651/1000\n",
       "576/576 [==============================] - 0s 133us/step - loss: 0.3842 - acc: 0.8403 - val_loss: 0.5395 - val_acc: 0.7708\n",
       "Epoch 652/1000\n",
       "576/576 [==============================] - 0s 164us/step - loss: 0.3944 - acc: 0.8472 - val_loss: 0.5211 - val_acc: 0.7708\n",
@@ -3133,13 +3091,7 @@
       "576/576 [==============================] - 0s 203us/step - loss: 0.3900 - acc: 0.8229 - val_loss: 0.5392 - val_acc: 0.7708\n",
       "Epoch 768/1000\n",
       "576/576 [==============================] - 0s 198us/step - loss: 0.3736 - acc: 0.8403 - val_loss: 0.5453 - val_acc: 0.7656\n",
-      "Epoch 769/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 769/1000\n",
       "576/576 [==============================] - 0s 152us/step - loss: 0.3741 - acc: 0.8281 - val_loss: 0.5421 - val_acc: 0.7552\n",
       "Epoch 770/1000\n",
       "576/576 [==============================] - 0s 161us/step - loss: 0.3760 - acc: 0.8385 - val_loss: 0.5531 - val_acc: 0.7708\n",
@@ -3381,13 +3333,7 @@
       "576/576 [==============================] - 0s 175us/step - loss: 0.3870 - acc: 0.8212 - val_loss: 0.5091 - val_acc: 0.7552\n",
       "Epoch 886/1000\n",
       "576/576 [==============================] - 0s 167us/step - loss: 0.3900 - acc: 0.8247 - val_loss: 0.5513 - val_acc: 0.7708\n",
-      "Epoch 887/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 887/1000\n",
       "576/576 [==============================] - 0s 167us/step - loss: 0.3700 - acc: 0.8316 - val_loss: 0.5330 - val_acc: 0.7760\n",
       "Epoch 888/1000\n",
       "576/576 [==============================] - 0s 173us/step - loss: 0.3680 - acc: 0.8420 - val_loss: 0.5371 - val_acc: 0.7656\n",
