--- a/Classwork/06.20.19...Intro.to.Tensorflow/Intro.to.TF.ipynb
+++ b/Classwork/06.20.19...Intro.to.Tensorflow/Intro.to.TF.ipynb
@@ -253,15 +253,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Building the TensorFlow graph"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.26105335\n"
+      "WARNING:tensorflow:From /Users/cherishkim/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
+      "WARNING:tensorflow:From /Users/cherishkim/anaconda3/lib/python3.7/site-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n"
      ]
     }
    ],
@@ -286,7 +298,7 @@
     "n_samples = train_X.shape[0]\n",
     "\n",
     "# tf Graph Input\n",
-    "X = tf.placeholder(\"float\")\n",
+    "X = tf.placeholder(\"float\") #we are connecting this to the flow of data\n",
     "Y = tf.placeholder(\"float\")\n",
     "\n",
     "# Set model weights\n",
@@ -300,8 +312,31 @@
     "cost = tf.reduce_sum(tf.pow(pred-Y, 2))/(2*n_samples)\n",
     "# Gradient descent\n",
     "#  Note, minimize() knows to modify W and b because Variable objects are trainable=True by default\n",
-    "optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(cost)\n",
-    "\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(cost)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apply the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.29854983\n",
+      "0.44927904\n"
+     ]
+    }
+   ],
+   "source": [
     "# Initialize the variables (i.e. assign their default value)\n",
     "init = tf.global_variables_initializer()\n",
     "\n",
@@ -315,7 +350,8 @@
     "    for epoch in range(training_epochs):\n",
     "        for (x, y) in zip(train_X, train_Y):\n",
     "            sess.run(optimizer, feed_dict={X: x, Y: y})\n",
-    "    print(sess.run(W))"
+    "    print(sess.run(W))\n",
+    "    print(sess.run(b))"
    ]
   },
   {
